gitops/istio/infrastructure/tools/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-system
spec:
  selector:
    istio: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ecsdemo-frontend
  namespace: istio-system
spec:
  hosts:
  - "ecsdemo-frontend.batatinha.com"
  gateways:
  - istio-gateway
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: ecsdemo-frontend.apps.svc.cluster.local
